Address review comments on UCConfigUtils refactor
- Rename UCConfigUtils.extractAuthConfig to extractCaseSensitiveAuthConfig
  to make the case-sensitive return contract explicit.
- Use Map.of for the legacy-token fallback and the empty auth result.
- Implement isDeltaRestApiEnabled via parseBoolean, and add
  isCredentialRenewalEnabled / isCredentialScopedFsEnabled so the default
  values live in the util; UCDeltaTokenBasedRestClient now uses them.
- Add a dedicated UCConfigUtilsSuite unit test suite.
- Consolidate the deltaRestApi/renewCredential/credScopedFs key constants
  in UCConfigUtils; UCTableInfo (incl. toUcConfig) and UCUtils now reuse
  UCConfigUtils constants instead of redefining them.
- Add comments at the CaseInsensitiveStringMap wrap sites documenting that
  the argument must be a case-preserved plain map.

Signed-off-by: openinx <openinx@gmail.com>